--- a/Resources/CommonResources.ar.resx
+++ b/Resources/CommonResources.ar.resx
@@ -129,6 +129,9 @@
   <data name="Home" xml:space="preserve">
     <value>الرئيسية</value>
   </data>
+  <data name="Name" xml:space="preserve">
+    <value>الاسم</value>
+  </data>
   <data name="NameAr" xml:space="preserve">
     <value>الاسم العربي</value>
   </data>
@@ -136,15 +139,21 @@
     <value>الاسم الانجليزي</value>
   </data>
   <data name="net5RazorPagesExample" xml:space="preserve">
-    <value>رازور باجيز ابليكيشن</value>
+    <value>اسم الشركة</value>
   </data>
   <data name="Phone" xml:space="preserve">
     <value>الهاتف</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>السعر</value>
   </data>
   <data name="Products" xml:space="preserve">
     <value>المنتجات</value>
   </data>
   <data name="Services" xml:space="preserve">
     <value>الخدمات</value>
+  </data>
+  <data name="Unit" xml:space="preserve">
+    <value>الوحدة</value>
   </data>
 </root>
